Fixed command panel styling which made scrollbar inaccessible

--- a/styles/interface.css
+++ b/styles/interface.css
@@ -87,7 +87,7 @@ html {
 	height: 300px;
 	background: #000;
 	color: white;
-	padding-right: 415px;
+	padding-right: 310px;
 }
 
 #commandPanel > div {
@@ -121,7 +121,7 @@ html {
 
 #commandPanel > #log {
 	position: absolute;
-	width: 400px;
+	width: 275px;
 	top: 0px;
 	right: 0px;
 	bottom: 0px;
